add firebase as a dependency

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
     <main-view></main-view>
   </body>
+  <script src="bower_components/firebase/firebase.js"></script>
   <script src="bower_components/riot/riot+compiler.min.js"></script>
   <script src="src/main-view.js" type="riot/tag"></script>
   <script>riot.mount('*')</script>
