--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF8">
   </head>
   <body>
-    <main-view></main-view>
+    <bob-view></bob-view>
   </body>
   <script src="bower_components/firebase/firebase.js"></script>
   <script src="bower_components/riot/riot+compiler.min.js"></script>
