start styling with less

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <body>
     <main-view></main-view>
   </body>
+  <link rel="stylesheet/less" type="text/css" href="css/main-view.less">
   <script src="bower_components/firebase/firebase.js"></script>
   <script src="bower_components/riot/riot+compiler.min.js"></script>
+  <script src="bower_components/less/dist/less.js"></script>
   <script src="src/main-view.js" type="riot/tag"></script>
   <script src="src/bob-view.js" type="riot/tag"></script>
   <script>
