--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="bower_components/less/dist/less.js"></script>
   <script src="src/main-view.js" type="riot/tag"></script>
   <script src="src/bob-view.js" type="riot/tag"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
   <script>
     // Router events
     var roomEvents = riot.observable();
