--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <script src="bower_components/less/dist/less.js"></script>
   <script src="src/main-view.js" type="riot/tag"></script>
   <script src="src/bob-view.js" type="riot/tag"></script>
+  <script src="src/youtube-helper.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
+  <script src="https://apis.google.com/js/client.js?onload=initYoutubeAPI"></script>
   <script>
     // Router events
     var roomEvents = riot.observable();
