--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <main-view></main-view>
   </body>
   <link rel="stylesheet/less" type="text/css" href="css/main-view.less">
+  <script src="bower_components/randomcolor/randomColor.js"></script>
   <script src="bower_components/firebase/firebase.js"></script>
   <script src="bower_components/riot/riot+compiler.min.js"></script>
   <script src="bower_components/less/dist/less.js"></script>
