using firebase-as-array to get tracks as an array; rendering in reverse order

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet/less" type="text/css" href="css/main-view.less">
   <script src="bower_components/randomcolor/randomColor.js"></script>
   <script src="bower_components/firebase/firebase.js"></script>
+  <script src="bower_components/firebase.getAsArray/firebase-as-array.js"></script>
   <script src="bower_components/riot/riot+compiler.min.js"></script>
   <script src="bower_components/less/dist/less.js"></script>
   <script src="src/main-view.js" type="riot/tag"></script>
