--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         text: 'bower_components/plugin-text/text.js'
       },
       transpiler: 'traceur',
-      baseURL: '/'
+      baseURL: './'
     });
     System.import('./index.js');
   </script>
