minor refactor; avoids warnings in console also ensure Join Room button doesn't flash visible briefly while data loads

--- a/src/chat.html
+++ b/src/chat.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="submit-chat-wrapper">
-  <div class="submit-chat" v-show="user.data && isParticipant(user.data.uid)">
+  <div class="submit-chat" v-show="userIsParticipant()">
     <input v-model="chatText" type="text" v-on:keyup.enter="submitChat" />
   </div>
 </div>
