--- a/src/room-view.html
+++ b/src/room-view.html
@@ -18,7 +18,7 @@
         <div class="player-color" v-bind:style="{ background: player.color }"></div>
         <div>{{ player.name }}</div>
       </div>
-      <div class="button purple" v-show="user.data && !isParticipant(user.data.uid)" v-on:click="joinRoom">Join Room!</div>
+      <div class="button purple" v-show="user.data && participants.data.length > 0 && !userIsParticipant()" v-on:click="joinRoom">Join Room!</div>
     </div>
 
     <chat v-bind:room-ref="roomRef"></chat>
@@ -27,13 +27,13 @@
 </div>
 
 <div class="submit-track-wrapper">
-  <div class="submit-track" v-show="isParticipant(user.data.uid)">
+  <div class="submit-track" v-show="userIsParticipant()">
     <div class="submit-track-input">
       <input v-model="urlInput" type="text" placeholder="Paste a youtube url here" v-on:keyup.enter="submitTrack" />
       <div class="submit-track-button" v-on:click="submitTrack" v-show="userIsNextPlayer()">Submit</div>
       <div class="submit-track-button" v-on:click="submitTrack" v-show="!userIsNextPlayer()">Submit out of turn</div>
     </div>
-    <div class="turn-indicator">it's {{ getNextPlayer().name }}'s turn</div>
+    <div class="turn-indicator">it's {{ getNextPlayerName() }}'s turn</div>
   </div>
 </div>
 
