remove submit button; minor changes to styling; can submit chat or url from same input

--- a/src/new-room-view.html
+++ b/src/new-room-view.html
@@ -44,9 +44,7 @@
 
   <div class="submit-box" v-show="user.data && userIsParticipant()">
     <div class="submit-track-input">
-      <input v-model="urlInput" type="text" placeholder="Paste a youtube url here" v-on:keyup.enter="submitTrack" />
-      <div class="submit-track-button" v-on:click="submitTrack" v-show="userIsNextPlayer()">Submit</div>
-      <div class="submit-track-button" v-on:click="submitTrack" v-show="!userIsNextPlayer()">Submit out of turn</div>
+      <input v-model="userInput" type="text" placeholder="Submit a message or youtube url here" v-on:keyup.enter="submitSomething" />
     </div>
     <div class="button purple" v-show="user.data && !userIsParticipant()" v-on:click="joinRoom">Join Room!</div>
   </div>
