hide tabs for now

--- a/src/new-room-view.html
+++ b/src/new-room-view.html
@@ -10,10 +10,10 @@
     <login></login>
   </header>
 
-  <div class="tabs">
+  <!-- <div class="tabs">
     <div class="button">Everything</div>
     <div class="button">Songs</div>
-  </div>
+  </div> -->
 
   <div class="video">
     <div class="no-video" v-show="!videoSrc">
