add fish-head link to extension

--- a/src/new-room-view.html
+++ b/src/new-room-view.html
@@ -10,6 +10,9 @@
     <login></login>
   </header>
 
+  <a class="fish-head" href="https://chrome.google.com/webstore/detail/fmn/mgmbpijpcjcincjbpnnhjnjclaijhodj" target="_blank">
+    <img src="images/fish-head-small.png">
+  </a>
   <!-- <div class="tabs">
     <div class="button">Everything</div>
     <div class="button">Songs</div>
