replace text with gibberish

--- a/src/new-room-view.html
+++ b/src/new-room-view.html
@@ -20,8 +20,7 @@
 
   <div class="video">
     <div class="no-video" v-show="!videoSrc">
-      <div class="arrow">&#8592;</div>
-      <div class="helper-text">click on a track in the list to play it</div>
+      <div class="helper-text">aelfaiwefjaoiwfjoaifejao</div>
     </div>
     <iframe id="video-player" v-show="videoSrc" v-bind:src="videoSrc" type="text/html" width="640" height="390" frameborder="0"></iframe>
   </div>
