--- a/src/room-view.html
+++ b/src/room-view.html
@@ -46,7 +46,7 @@
 
   <div class="submit-box" v-show="user.data">
     <div class="submit-track-input" v-show="userIsParticipant()">
-      <input v-model="userInput" type="text" placeholder="Submit a message or youtube url here" v-on:keyup.enter="submitSomething" />
+      <input v-model="userInput" type="text" placeholder="{{ getPlaceholderText() }}" v-on:keyup.enter="submitSomething" />
     </div>
     <div class="button purple" v-show="!userIsParticipant()" v-on:click="joinRoom">Join Room!</div>
   </div>
