--- a/src/room-view.html
+++ b/src/room-view.html
@@ -30,18 +30,25 @@
 
   <div class="activities" v-scroll-activities="roomRef">
     <div class="activity" v-for="activity in activities">
-      
+
       <div class="message-text" v-if="isChat(activity)">
-        <div class="message-color" v-bind:style="{ background: getPlayerColor(activity.userId)  }"></div>
+        <div class="message-author"
+             v-bind:style="{ color: getPlayerColor(activity.userId)  }"
+             v-if="showAuthorName($index)">
+          {{ getPlayer(activity.userId).name }}
+        </div>
+        <div class="message-color" v-bind:style="{ background: getPlayerColor(activity.userId) }"></div>
         <div>{{ activity.chat }}</div>
       </div>
 
-      <div class="track" v-if="isTrack(activity)" v-on:click="setVideoUrl(activity)">
+      <div class="track"
+           v-if="isTrack(activity)"
+           v-on:click="setVideoUrl(activity)"
+           v-bind:style="{ 'border-color': getPlayerColor(activity.userId) }">
         <div class="track-title">
           <div v-show="activity.title">{{ activity.title }}</div>
           <div v-show="!activity.title">{{ activity.url }}</div>
         </div>
-        <div class="track-color" v-bind:style="{ background: getPlayerColor(activity.userId) }"></div>
       </div>
 
     </div>
