render skipped player names

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </div>
   </body>
 
+  <script src="bower_components/underscore/underscore-min.js"></script>
   <script src="bower_components/randomcolor/randomColor.js"></script>
   <script src="bower_components/firebase/firebase.js"></script>
   <script src="bower_components/firebase.getAsArray/src/firebase-as-array.js"></script>
